--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <a class="nav-link fw-light py-0" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fw-light py-0" href="#">Contact</a>
+                            <a class="nav-link fw-light py-0" href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
